--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ scikit-learn
 torch>=1.4.0
 sacred>=0.8.0
 tqdm
-git+git://github.com/luizgh/visdom_logger
+git+https://github.com/luizgh/visdom_logger.git
 faiss-gpu
