--- a/configs/cub200_softtriple.yaml
+++ b/configs/cub200_softtriple.yaml
@@ -2,8 +2,8 @@ DATA:
     Name: 'cub'
     Path:
         data_path: 'data/CUB_200_2011'
-        train_file: 'train_small.txt'
-        test_file: 'test_new.txt'
+        train_file: 'train.txt'
+        test_file: 'test.txt'
         pool_file: 'pool.txt'
 
     Sampler:
@@ -26,9 +26,9 @@ DATA:
         color_jitter: null
         
 Train:
-    epochs: 100
+    epochs: 50
     modellr: 0.0001
-    centerlr: 0.001
+    centerlr: 0.01
     momentum: 0.
     nesterov: False
     weight_decay: 0.0001
@@ -53,7 +53,8 @@ Train:
     gamma: 0.1
     tau: 0.2
     margin: 0.01
-    K: 5
+    K: 10
+    proxy_initialize: True
 
     
 MODEL:
@@ -64,7 +65,7 @@ MODEL:
     norm_layer: None  # use a normalization layer (batchnorm or layernorm) for the features
     remap: False  # remap features through a linear layer
     detach: False  # detach features before feeding to the classification layer. Prevents training of the feature extractor with cross-entropy.
-    normalize: False  # normalize the features
+    normalize: True  # normalize the features
     set_bn_eval: True  # set bn in eval mode even in training
     normalize_weight: False  # normalize the weights of the classification layer
     
